[project]
name = "sca-simulator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy == 1.26.4",
    "sciform == 0.39.1",
    "matplotlib == 3.10.5",
    "requests == 2.32.5",
    "pillow == 11.3.0",
    "scared==0.7.8",
    "ipykernel==7.1.0",
    "scalab@https://github.com/Gideop/scalab.git",
    "pandas==2.3.2",
    "jinja2==3.1.6"
]

[tool.uv]
# Always install scared 0.7.8
override-dependencies = [
    "numpy==1.26.4"
]
