[project]
name = "sca-simulator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy == 1.26.4",
    "sciform == 0.39.1",
    "matplotlib == 3.10.5",
    "requests == 2.32.5",
    "pillow == 11.3.0",
    "scared==0.7.8",
    "ipykernel==7.1.0",
    "pandas==2.3.2",
    "jinja2==3.1.6",
    "ipywidgets>=8.1.8",
    "data-url>=1.3.1",
    "ipympl>=0.10.0",
    "voila>=0.5.12",
]

[tool.uv]
# Always install scared 0.7.8
override-dependencies = [
    "numpy==1.26.4"
]
